using pure streams, this seems more time consuming and complex un necessary